<resources>
    <string name="app_name">MyNews</string>

    <string name="menu_drawer_title_item">Categories</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="item_top_stories">Top stories</string>
    <string name="item_most_popular">Most Popular</string>
    <string name="item_jobs">Jobs</string>
    <string name="item_national">National</string>
    <string name="item_business">Business</string>
    <string name="item_food">Food</string>
    <string name="item_sport">Sport</string>

    <string name="nav_header_icon_nyt_description">NewYork Times icon</string>
    <string name="nav_header_icon_facebook_description">Facebook icon</string>

    <string name="edit_txt_search">*Enter at least one QueryTerm</string>
    <string name="txt_view_begin_date">Begin Date</string>
    <string name="txt_view_end_date">End Date</string>
    <string name="txt_view_enable_notif">Enable notifications (once per day)</string>
    <string name="txt_invalid_statement_for_date_first">*Begin Date must be less than End Date</string>
    <string name="txt_invalid_statement_for_date_second">*Begin Date and End Date must be less than the date of the day</string>
    <string name="txt_obligation_to_select_one_checkbox">*You have to selected at least one category</string>
    <string name="btn_search">Search</string>

    <string name="btn_help">Activity Help</string>
    <string name="btn_about">Activity About</string>

    <string name="recycler_view_item_date">date</string>

    <string name="menu_toolbar_search">Search</string>
    <string name="menu_toolbar_notifications">Notifications</string>
    <string name="menu_toolbar_help">Help</string>
    <string name="menu_toolbar_about">About</string>

    <string name="section_default_txt">Misc.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
