<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_toolbar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_toolbar_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_toolbar_notifications"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/menu_toolbar_notifications"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_toolbar_help"
        android:icon="@drawable/ic_help_white_24dp"
        android:title="@string/menu_toolbar_help"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_toolbar_about"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/menu_toolbar_about"
        app:showAsAction="ifRoom"/>

</menu>